# advance-seeds-field-inspector-ml

./: .gitignore  README.md  pyproject.toml
.github/workflows/: backend.yml  pages.yml
apps/web/: .env.example  index.html  package-lock.json  package.json  tsconfig.json
configs/: dataset.banana-v1.yaml  dataset.banana-v2.yaml  dataset.example.yaml  model_export_contract.json  train.banana-v1.yaml  train.banana-v2.yaml
data/: README.md
docs/: NEXT_AGENT_HANDOFF_2026-05-03.md  NEXT_AGENT_HANDOFF_DASHBOARD_LIVE.md  NEXT_AGENT_HANDOFF_MODEL_REGISTRY.md  app-handoff.md  backend-setup.md  colab-mcp-handoff.md  dynamic-model-loading-handoff.md  hosted-training.md  model-registry-api-postman.md  model-registry-handoff.md  model-registry-postman-collection.json  training-hyperparameters.md
infra/: r2-cors.json
models/: README.md
notebooks/: train_run.ipynb
openspec/: config.yaml
scripts/: export_mobile_model_candidates.py  export_to_demo.py  prepare_banana_dataset.py  train_for_run.py  train_local_banana.sh  train_yolo26n_seg.py  validate_dataset.py  write_model_metadata.py
src/advance_seeds_ml/: __init__.py  banana_dataset.py  calibration.py  contracts.py  dataset.py  training.py
supabase/: .env.example  config.toml  seed.sql
supabase/fixtures/: seed_run_v1.sql
supabase/migrations/: 20260502000001_model_lines.sql  20260502000002_runs_and_metrics.sql  20260502000005_rls.sql  (+9 more)
tests/: test_banana_dataset.py  test_calibration.py  test_contracts.py  test_dataset.py  test_registry.py  test_train_for_run_exports.py  test_training.py  test_training_worker.py
(+128 files in other folders)
